--- a/css/main.css
+++ b/css/main.css
@@ -57,4 +57,58 @@ justify-content:space-around ;
     display:flex;
     flex-direction: column;
     align-items: flex-end;
+    
+    
 }
+.pizza{
+    width: 142px;
+   
+    
+    border-radius: 28px;    
+    display:flex;
+    justify-content:center;
+    flex-direction: column;
+    padding:20px;
+    margin-top: 10%;
+    position: relative;
+}
+
+.caja1{
+    position:absolute;
+    margin-bottom: 70%;
+    z-index: 2;
+    margin-top: 20px;
+
+}
+
+.cajagris{
+    background-color: #D9D9D9;
+    width:180px;
+    height: 142px;
+    border-radius: 20px;
+    z-index: 1;
+}
+
+.caja2{
+    margin-top: 40%;
+    width:180px;
+    height: 142px;
+    
+    
+}
+
+.img-pizza{
+    width: 91px;
+    height: 87px; 
+}
+
+.add-button{
+    width: 26px;
+    height: 26px;
+    background-color: #FDC138;
+    border: none;
+    border-radius: 13px;
+    color:white; 
+}
+
+
