--- a/css/main.css
+++ b/css/main.css
@@ -1,32 +1,28 @@
+/* Google fonts */
+
+
 /*CSS Reset*/
 *{
     margin: 0px;
     padding: 0px;
-
 }
 /*Header styling*/
-.food-planet{
+
+.logo principal{
 
     background-color:#FE7816;
     color:rgb(250, 243, 243);
     font-size: 10px;
     width: 111px;
-height: 35px;
-border-radius: 11px;
-display:flex; 
-justify-content: center;
-align-items:center ;
-    
-}
-.cohete{
-    width: 30px;
-height: auto;
-
-
+    height: 35px;
+    border-radius: 11px;
+    display:flex; 
+    justify-content: center;
+    align-items:center ;
 }
 .container{
-display:flex;
-align-items: center;
+    display:flex;
+    align-items: center;
 }
 h1{
 
@@ -42,12 +38,12 @@ h1{
 }
 .container3{
     width: 398.69px;
-height: 109.56px;
-background: #FE7816;
-border-radius: 19px;
-display: flex;
-align-items:center ;
-justify-content:space-around ;
+    height: 109.56px;
+    background: #FE7816;
+    border-radius: 19px;
+    display: flex;
+    align-items:center ;
+    justify-content:space-around ;
 
 }
 .container4 p{
@@ -57,9 +53,9 @@ justify-content:space-around ;
     display:flex;
     flex-direction: column;
     align-items: flex-end;
-    
-    
 }
+
+
 .pizza{
     width: 142px;
    
@@ -93,6 +89,11 @@ justify-content:space-around ;
     margin-top: 40%;
     width:180px;
     height: 142px;
+    justify-content: center;
+    flex-direction: row;
+    align-items: flex-end;
+    
+    
     
     
 }
@@ -100,6 +101,9 @@ justify-content:space-around ;
 .img-pizza{
     width: 91px;
     height: 87px; 
+    
+   
+    
 }
 
 .add-button{
@@ -109,6 +113,7 @@ justify-content:space-around ;
     border: none;
     border-radius: 13px;
     color:white; 
+    align-items:center;
 }
 
 
